--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-modal": "^3.16.1",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "react-use-cart": "^1.13.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
