--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.2",
     "react-use-cart": "^1.13.0"
